# codeql-report-ai

./: .gitignore  Cargo.toml  Makefile  README.md  env.example  setup.sh  test_fixed_code.py
.cursor/rules/: code-rules.mdc  project-rules.mdc
.github/workflows/: ci.yml  release-multiarch.yml  release-musl.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: analyzer.rs  chatgpt.rs  codeql.rs  config.rs  error.rs  lib.rs  logging.rs  markdown.rs  types.rs  utils.rs
crates/corelib/src/domain/: entities.rs  mod.rs
examples/: basic_usage.rs  sample-codeql-results.json
