[package]
name = "codeql-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Code Report - Advanced CodeQL Analysis with AI Integration"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
codeql-corelib = { path = "../corelib" }
tokio.workspace = true
clap.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true

[[bin]]
name = "codeql-ai"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
