[package]
name = "codeql-corelib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core library for CodeQL results analysis with ChatGPT integration"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
thiserror.workspace = true 
walkdir.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
tokio-util.workspace = true
chrono.workspace = true
colored.workspace = true
regex.workspace = true

[lib]
name = "codeql_corelib"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockito = "1.2"
